--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="full" lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,10 +11,18 @@
     <title>Fixed Top Navbar Example for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="app/components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="app/components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="app/components/components-font-awesome/css/font-awesome.min.css"/>
+
+    <!-- Family Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Roboto:100&subset=latin,greek' rel='stylesheet' type='text/css'>
+
+    <!-- Custom styles -->
     <link href="app/css/navbar-fixed-top.css" rel="stylesheet">
+    <link href="app/css/sticky-footer.css" rel="stylesheet">
+    <link href="app/css/main.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -25,66 +33,80 @@
 
 <body>
 
-<!-- Fixed navbar -->
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Project name</a>
+<div class="container-fluid">
+
+
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-default navbar-" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#"><img src="app/img/logo-stemfyla-250x250.png" alt="Company Logo"
+                                                      height="100"/></a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse pull-right">
+                <ul class="nav navbar-nav">
+                    <li class="active">
+                        <a href="#">
+                            Αρχική
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#about"><i class="fa fa-circle fa-0x"></i>
+                            Υλικό
+                        </a></li>
+                    <li>
+                        <a href="#contact"><i class="fa fa-circle fa-0x"></i>
+                            Κατάλογος
+                        </a></li>
+                    <li><a href="#contact"><i class="fa fa-circle fa-0x"></i>
+                        Επικοινωνία</a></li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown
-                        <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li class="divider"></li>
-                        <li class="dropdown-header">Nav header</li>
-                        <li><a href="#">Separated link</a></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="../navbar/">Default</a></li>
-                <li><a href="../navbar-static-top/">Static top</a></li>
-                <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
-            </ul>
-        </div>
-        <!--/.nav-collapse -->
-    </div>
-</nav>
-
-<div class="container">
-
-    <!-- Main component for a primary marketing message or call to action -->
-    <div class="jumbotron">
-        <h1>Navbar example</h1>
-
-        <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It
-            includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-
-        <p>To see the difference between static and fixed top navbars, just scroll.</p>
-
-        <p>
-            <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
-        </p>
-    </div>
+    </nav>
 
 </div>
 <!-- /container -->
+
+<footer class="footer">
+    <div class="container">
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="">
+                    <i class="fa fa-facebook-square fa-3x" id="facebook-id-fontawesome"></i>
+                </div>
+
+                <div class="pull-left">
+                    <div class="text-muted">
+                        Κάντε μας like στο:
+                    </div>
+                    <div class="text-muted">
+                        Facebook
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="text-muted">
+                    Επικοινωνία
+                </div>
+            </div>
+
+        </div>
+        <!-- /.row -->
+
+    </div>
+</footer>
+<!-- /footer -->
 
 
 <!-- Bootstrap core JavaScript
