--- a/index.html
+++ b/index.html
@@ -80,31 +80,30 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-md-6">
-                <div class="">
-                    <i class="fa fa-facebook-square fa-3x" id="facebook-id-fontawesome"></i>
+            <div class="col-lg-4 col-md-5 col-sm-6 col-xs-9 col-xs-push-2">
+                <div class="col-lg-4 col-lg-push-2 col-md-6 col-md-push-4 col-sm-5 col-sm-push-0 col-xs-2 col-xs-pull-3">
+                    <a href='https://www.facebook.com/stemfyla'>
+                        <i class="fa fa-facebook-square fa-3x" id="facebook-id-fontawesome"></i>
+                    </a>
                 </div>
 
-                <div class="pull-left">
-                    <div class="text-muted">
-                        Κάντε μας like στο:
-                    </div>
-                    <div class="text-muted">
-                        Facebook
-                    </div>
+                <div class="col-lg-8 col-lg-pull-0 col-md-6 col-md-pull-0 col-sm-7 col-sm-pull-6 col-xs-10 col-xs-pull-3">
+                    Κάντε μας like στο:<br/>
+                    Facebook
                 </div>
+
+
             </div>
 
-            <div class="col-md-6">
-                <div class="text-muted">
-                    Επικοινωνία
-                </div>
+            <div class="col-lg-5 col-lg-push-1 col-md-5 col-md-pull-3 col-sm-6 col-sm-push-1 col-xs-3 col-xs-pull-1 pull-right">
+                Επικοινωνία
             </div>
 
         </div>
         <!-- /.row -->
 
     </div>
+    <!-- /.container -->
 </footer>
 <!-- /footer -->
 
