--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.75, user-scalable=no" />
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="favicon.ico">
 
     <title>Fixed Top Navbar Example for Bootstrap</title>
 
@@ -87,7 +87,7 @@
                     </a>
                 </div>
 
-                <div class="col-lg-8 col-lg-pull-0 col-md-6 col-md-pull-0 col-sm-7 col-sm-pull-6 col-xs-10 col-xs-pull-3">
+                <div class="footer-social col-lg-8 col-lg-pull-0 col-md-6 col-md-pull-0 col-sm-7 col-sm-pull-6 col-xs-10 col-xs-pull-2">
                     Κάντε μας like στο:<br/>
                     Facebook
                 </div>
