--- a/app/nav-bar.html
+++ b/app/nav-bar.html
@@ -1,39 +1,46 @@
 <!-- Fixed navbar -->
-<nav class="navbar navbar-default navbar-" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#"><img src="app/img/logo-stemfyla-250x250.png" alt="Company Logo"
-                                                  height="100"/></a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse pull-right">
-            <ul class="nav navbar-nav">
-                <li class="active">
-                    <a href="#">
-                        Αρχική
-                    </a>
-                </li>
-                <li>
-                    <a href="#about"><i class="fa fa-circle fa-0x"></i>
-                        Υλικό
-                    </a></li>
-                <li>
-                    <a href="#contact"><i class="fa fa-circle fa-0x"></i>
-                        Κατάλογος
-                    </a></li>
-                <li><a href="#contact"><i class="fa fa-circle fa-0x"></i>
-                    Επικοινωνία</a></li>
-            </ul>
-        </div>
-        <!--/.nav-collapse -->
-    </div>
-</nav>
+<nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#"><img src="app/img/logo-stemfyla-250x250.png" alt="Company Logo"
+                                                      height="100"/></a>
+            </div>
 
-</div>
-<!-- /container -->
+            <div id="navbar" class="navbar-collapse collapse pull-right">
+                <ul class="nav navbar-nav">
+                    <li class="active">
+                        <a href="#">
+                            Αρχική
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#about"><i class="fa fa-circle fa-0x"></i>
+                            Υλικό
+                        </a></li>
+                    <li>
+                        <a href="#contact"><i class="fa fa-circle fa-0x"></i>
+                            Κατάλογος
+                        </a></li>
+                    <li>
+                        <a href="#contact"><i class="fa fa-circle fa-0x"></i>
+                            Ζωντανό Πρόγραμμα
+                        </a></li>
+                    <li><a href="#contact"><i class="fa fa-circle fa-0x"></i>
+                        Επικοινωνία</a></li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
+
+        </div>
+    </div>
+
+</nav>
+<!-- /.navbar navbar-default -->
