--- a/app/footer.html
+++ b/app/footer.html
@@ -1,28 +1,31 @@
 <footer class="footer">
     <div class="container">
 
-        <div class="row">
-            <div class="col-lg-4 col-md-5 col-sm-6 col-xs-9 col-xs-push-2">
-                <div class="col-lg-4 col-lg-push-2 col-md-6 col-md-push-4 col-sm-5 col-sm-push-0 col-xs-2 col-xs-pull-3">
+
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+
+            <div class="col-lg-12 col-lg-push-3 col-md-12 col-sm-12 col-xs-12">
+
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                     <a href='https://www.facebook.com/stemfyla'>
-                        <i class="fa fa-facebook-square fa-3x" id="facebook-id-fontawesome"></i>
+                        <i class="fa fa-facebook-square fa-2x" id="facebook-id-fontawesome"></i>
                     </a>
                 </div>
 
-                <div class="footer-social col-lg-8 col-lg-pull-0 col-md-6 col-md-pull-0 col-sm-7 col-sm-pull-6 col-xs-10 col-xs-pull-2">
+                <div class="social-message col-lg-9 col-lg-pull-2 col-md-9 col-sm-9 col-xs-9">
                     Κάντε μας like στο:<br/>
                     Facebook
                 </div>
 
-
             </div>
 
-            <div class="col-lg-5 col-lg-push-1 col-md-5 col-md-pull-3 col-sm-6 col-sm-push-1 col-xs-3 col-xs-pull-1 pull-right">
-                Επικοινωνία
-            </div>
 
         </div>
-        <!-- /.row -->
+
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+            Επικοινωνία
+        </div>
+
 
     </div>
     <!-- /.container -->
