--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <link href="app/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 
     <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="app/lib/components-font-awesome/css/font-awesome.min.css"/>
+    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" media="all"
+          rel="stylesheet" type="text/css">
+
 
     <!-- Family Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Roboto:100&subset=latin,greek' rel='stylesheet' type='text/css'>
