--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
 
 <body ng-controller="PanelController as panelCtrl">
 
-<div class="container-fluid">
+<div class="container-fluid" id="content">
 
     <app-nav-bar></app-nav-bar>
 
 
     <app-contact-page ng-show="panelCtrl.isSelected(5)"></app-contact-page>
 
-
-    <app-footer></app-footer>
-
 </div>
+
+<app-footer></app-footer>
+
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
