Update social icon & location

--- a/app/footer.html
+++ b/app/footer.html
@@ -1,17 +1,17 @@
 <footer class="footer">
     <div class="container">
 
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-8">
 
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-justify">
 
-                <div class="col-lg-2 col-md-3 col-md-push-3 col-sm-3  col-sm-push-2 col-xs-2">
-                    <a href='https://www.facebook.com/stemfyla'>
-                        <i class="fa fa-facebook-square fa-2x" id="facebook-id-fontawesome"></i>
+                <div class="col-lg-3 col-lg-push-4 col-md-3 col-md-push-5 col-sm-3  col-sm-push-5 col-xs-1">
+                    <a href="https://www.facebook.com/stemfylaclass">
+                        <span class="zocial icon facebook"></span>
                     </a>
                 </div>
 
-                <div class="social-message col-lg-9 col-md-9 col-sm-9 col-sm-push-2 col-xs-10 col-xs-push-1">
+                <div class="social-message col-lg-8 col-lg-push-2 col-md-9 col-md-push-3 col-sm-9 col-sm-push-4 col-xs-9 col-xs-push-1">
                     Κάντε μας like στο:<br/>
                     Facebook
                 </div>
@@ -21,7 +21,7 @@
 
         </div>
 
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-4">
             Επικοινωνία
         </div>
 
