--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <!-- Bootstrap core CSS -->
     <link href="app/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 
-    <!-- Font Awesome CSS -->
-    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" media="all"
-          rel="stylesheet" type="text/css">
+    <!-- Social samcollins/css-social-buttons -->
+    <link rel="stylesheet" type="text/css" href="app/lib/samcollins-css-social-buttons/css/zocial.css"/>
 
 
     <!-- Family Fonts -->
