Hotfix: facebook URL.

--- a/app/footer.html
+++ b/app/footer.html
@@ -6,7 +6,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-justify">
 
                 <div class="col-lg-3 col-lg-push-4 col-md-3 col-md-push-5 col-sm-3  col-sm-push-5 col-xs-1">
-                    <a href="https://www.facebook.com/stemfylaclass">
+                    <a href="https://www.facebook.com/stemfyla">
                         <span class="zocial icon facebook"></span>
                     </a>
                 </div>
