--- a/app/footer.html
+++ b/app/footer.html
@@ -28,5 +28,16 @@
 
     </div>
     <!-- /.container -->
+
+    <div class="container" id="footer-copyright">
+        <div class="col-md-6 col-md-push-3">
+            Copyright © Stemfyla 2014
+        </div>
+
+        <div class="col-md-6">
+            Powered by NDM
+        </div>
+
+    </div>
 </footer>
 <!-- /.footer -->
