--- a/app/nav-bar.html
+++ b/app/nav-bar.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-default" role="navigation">
     <div class="container">
         <div class="row">
-            <div class="navbar-header">
+            <div class="navbar-header col-md-1">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
                         aria-expanded="false" aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
@@ -41,6 +41,7 @@
                 </ul>
             </div>
             <!--/.nav-collapse -->
+
         </div>
 
     </div>
