--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
     <link rel="stylesheet" type="text/css" href="app/lib/samcollins-css-social-buttons/css/zocial.css"/>
 
 
+    <!-- Font Awesome CSS -->
+    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" media="all"
+          rel="stylesheet" type="text/css">
+
+
     <!-- Family Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Roboto:100&subset=latin,greek' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles -->
-    <link href="app/css/navbar-fixed-top.css" rel="stylesheet">
-    <link href="app/css/sticky-footer.css" rel="stylesheet">
+    <link href="app/css/nav-bar.css" rel="stylesheet">
+    <link href="app/css/footer.css" rel="stylesheet">
     <link href="app/css/main.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -37,7 +42,6 @@
 <div class="container-fluid" id="content">
 
     <app-nav-bar></app-nav-bar>
-
 
     <app-contact-page ng-show="panelCtrl.isSelected(5)"></app-contact-page>
 
