--- a/app/nav-bar.html
+++ b/app/nav-bar.html
@@ -1,49 +1,45 @@
 <!-- Fixed navbar -->
 <nav class="navbar navbar-default" role="navigation">
     <div class="container">
-        <div class="row">
-            <div class="navbar-header col-md-1">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                        aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href ng-click="panelCtrl.selectTab(1)">
-                    <img src="app/img/logo-stemfyla-250x250.png"
-                         alt="Company Logo"
-                         height="100"/></a>
-            </div>
-
-            <div id="navbar" class="navbar-collapse collapse pull-left">
-                <ul class="nav navbar-nav">
-                    <li ng-class="{ active: panelCtrl.isSelected(1) }">
-                        <a href ng-click="panelCtrl.selectTab(1)">
-                            Αρχική
-                        </a>
-                    </li>
-                    <li ng-class="{ active: panelCtrl.isSelected(2) }">
-                        <a href ng-click="panelCtrl.selectTab(2)"><i class="fa fa-circle fa-0x"></i>
-                            Υλικό
-                        </a></li>
-                    <li ng-class="{ active: panelCtrl.isSelected(3) }">
-                        <a href ng-click="panelCtrl.selectTab(3)"><i class="fa fa-circle fa-0x"></i>
-                            Κατάλογος
-                        </a></li>
-                    <li ng-class="{ active: panelCtrl.isSelected(4) }">
-                        <a href ng-click="panelCtrl.selectTab(4)"><i class="fa fa-circle fa-0x"></i>
-                            Ζωντανό Πρόγραμμα
-                        </a></li>
-                    <li ng-class="{ active: panelCtrl.isSelected(5) }">
-                        <a href ng-click="panelCtrl.selectTab(5)"><i class="fa fa-circle fa-0x"></i>
-                            Επικοινωνία</a></li>
-                </ul>
-            </div>
-            <!--/.nav-collapse -->
-
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href ng-click="panelCtrl.selectTab(1)">
+                <img src="app/img/logo-stemfyla-250x250.png"
+                     alt="Company Logo"
+                     height="100"/></a>
         </div>
 
+        <div id="navbar" class="navbar-collapse collapse push-left">
+            <ul class="nav navbar-nav">
+                <li ng-class="{ active: panelCtrl.isSelected(1) }">
+                    <a href ng-click="panelCtrl.selectTab(1)">
+                        Αρχική
+                    </a>
+                </li>
+                <li ng-class="{ active: panelCtrl.isSelected(2) }">
+                    <a href ng-click="panelCtrl.selectTab(2)"><i class="fa fa-circle fa-0x"></i>
+                        Υλικό
+                    </a></li>
+                <li ng-class="{ active: panelCtrl.isSelected(3) }">
+                    <a href ng-click="panelCtrl.selectTab(3)"><i class="fa fa-circle fa-0x"></i>
+                        Κατάλογος
+                    </a></li>
+                <li ng-class="{ active: panelCtrl.isSelected(4) }">
+                    <a href ng-click="panelCtrl.selectTab(4)"><i class="fa fa-circle fa-0x"></i>
+                        Ζωντανό Πρόγραμμα
+                    </a></li>
+                <li ng-class="{ active: panelCtrl.isSelected(5) }">
+                    <a href ng-click="panelCtrl.selectTab(5)"><i class="fa fa-circle fa-0x"></i>
+                        Επικοινωνία</a></li>
+            </ul>
+        </div>
+        <!--/.nav-collapse -->
     </div>
     <!-- /.container -->
 
