Hotfix: fix footer for small smartphones.

--- a/app/footer.html
+++ b/app/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="container">
 
-        <div class="col-lg-3 col-lg-push-3 col-md-3 col-md-push-3 col-sm-4 col-sm-push-1 col-xs-7 col-xs-push-1 text-justify">
+        <div class="col-lg-3 col-lg-push-3 col-md-3 col-md-push-3 col-sm-4 col-sm-push-1 col-xs-9 col-xs-push-1 text-justify">
 
             <!--<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">-->
 
@@ -28,7 +28,7 @@
 
         </div>
 
-        <div class="col-lg-3 col-lg-push-3 col-md-3 col-md-push-3  col-sm-3 col-sm-push-3 col-xs-3 col-xs-push-0">
+        <div class="col-lg-3 col-lg-push-3 col-md-3 col-md-push-3  col-sm-3 col-sm-push-3 col-xs-3 col-xs-pull-2">
             Επικοινωνία
         </div>
 
