Hotfix: bypass adblock for facebook icon.

--- a/app/footer.html
+++ b/app/footer.html
@@ -3,28 +3,16 @@
 
         <div class="col-lg-3 col-lg-push-3 col-md-3 col-md-push-3 col-sm-4 col-sm-push-1 col-xs-9 col-xs-push-1 text-justify">
 
-            <!--<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">-->
-
-            <!--<div class="col-lg-1">-->
-            <!-- col-lg-push-4 col-md-3 col-md-push-5 col-sm-3  col-sm-push-5 col-xs-1 -->
             <a href="https://www.facebook.com/stemfyla" id="facebook-logo"
                class="col-lg-2 col-md-3 col-sm-2 col-xs-2">
-                <span class="zocial icon facebook"></span>
+                <img src="app/img/fcbk-logo.png" id="hidden-fcbk-logo" height=42 alt="Logo" class="img-rounded">
             </a>
 
-            <!--</div>-->
 
-            <!--<div class="social-message col-lg-11">-->
-            <!-- col-lg-push-2 col-md-9 col-md-push-3 col-sm-9 col-sm-push-4 col-xs-9 col-xs-push-1 -->
             <div class="social-message col-lg-10 col-lg-pull-0 col-md-8 col-md-pull-2 col-sm-8 col-sm-pull-0 col-xs-10 col-xs-pull-1">
                 Κάντε μας like στο:<br/>
                 Facebook
             </div>
-
-            <!--</div>-->
-
-            <!--</div>-->
-
 
         </div>
 
