Hotfix: Fit navbar options for all desktop & tablet's screens.

--- a/app/nav-bar.html
+++ b/app/nav-bar.html
@@ -15,7 +15,7 @@
                      height="100"/></a>
         </div>
 
-        <div id="navbar" class="navbar-collapse collapse push-left">
+        <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li ng-class="{ active: panelCtrl.isSelected(1) }">
                     <a href ng-click="panelCtrl.selectTab(1)">
@@ -32,7 +32,7 @@
                     </a></li>
                 <li ng-class="{ active: panelCtrl.isSelected(4) }">
                     <a href ng-click="panelCtrl.selectTab(4)"><i class="fa fa-circle fa-0x"></i>
-                        Ζωντανό Πρόγραμμα
+                        Ζωντανές Εκδηλώσεις
                     </a></li>
                 <li ng-class="{ active: panelCtrl.isSelected(5) }">
                     <a href ng-click="panelCtrl.selectTab(5)"><i class="fa fa-circle fa-0x"></i>
