--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.75, user-scalable=no"/>
-    <meta name="description" content="">
+    <meta name="description"
+          content="Καφε ρακι μπαρ με cocktails απο ελληνικές ετικέτες ποτών και εξαιρετικούς μεζέδες">
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
 
@@ -42,6 +43,8 @@
 <div class="container-fluid" id="content">
 
     <app-nav-bar></app-nav-bar>
+
+    <app-catalog-page ng-show="panelCtrl.isSelected(3)"></app-catalog-page>
 
     <app-contact-page ng-show="panelCtrl.isSelected(5)"></app-contact-page>
 
