Add material page using magnific pop lightbox plugin.

--- a/app/footer.html
+++ b/app/footer.html
@@ -5,7 +5,7 @@
 
             <a href="https://www.facebook.com/stemfyla" id="facebook-logo"
                class="col-lg-2 col-md-3 col-sm-2 col-xs-2">
-                <img src="app/img/fcbk-logo.png" id="hidden-fcbk-logo" height=42 alt="Logo" class="img-rounded">
+                <img src="app/img/logos/fcbk-logo.png" id="hidden-fcbk-logo" height=42 alt="Logo" class="img-rounded">
             </a>
 
 
