Hotfix: remove id preventing functionality of collapsed navbar.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <div class="container-fluid" id="content">
 
-    <app-nav-bar id="navbar"></app-nav-bar>
+    <app-nav-bar></app-nav-bar>
 
     <app-material-page ng-show="panelCtrl.isSelected(2)"></app-material-page>
 
