contact.html edited online with Bitbucket

--- a/app/contact.html
+++ b/app/contact.html
@@ -1,16 +1,17 @@
 <div class="row">
     <div>
         <div class="panel panel-default">
-            <div class="text-center header">Our Office</div>
+            <div class="text-center header">STEMFYLA</div>
             <div class="panel-body text-center">
-                <h4>Address</h4>
+                <h4></h4>
 
                 <div>
                     ΦΑΝΕΡΩΜΕΝΗΣ 8<br/>
-                    15561 Athens<br/>
-                    Greece<br/>
-                    #(0030) 21 6900 0752<br/>
-                    service@stemfyla.gr<br/>
+                    Εμπορικό Κέντρο Πλατείας Φανερωμένης<br/>
+                    15561 Χολαργός<br/>
+                    Αθήνα<br/>
+                    21 6900 0752<br/>
+                    info@stemfyla.gr<br/>
                 </div>
                 <hr/>
             </div>
