--- a/app/contact.html
+++ b/app/contact.html
@@ -23,35 +23,35 @@
     <div class="well well-sm form-group">
         <form class="form-horizontal" method="post">
             <fieldset>
-                <legend class="text-center header">Contact us</legend>
+                <legend class="text-center header">Συμπληρώστε τη παρακάτω φόρμα για να κάνετε κράτηση</legend>
                 <div class="form-group">
                     <div class="col-md-10 col-md-offset-1">
-                        <input id="fname" name="name" type="text" placeholder="First Name" class="form-control">
+                        <input id="fname" name="name" type="text" placeholder="Ονομα" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-10 col-md-offset-1">
-                        <input id="lname" name="name" type="text" placeholder="Last Name" class="form-control">
+                        <input id="lname" name="name" type="text" placeholder="Επίθετο" class="form-control">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-md-10 col-md-offset-1">
-                        <input id="email" name="email" type="text" placeholder="Email Address"
+                        <input id="email" name="email" type="text" placeholder="Email"
                                class="form-control">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-md-10 col-md-offset-1">
-                        <input id="phone" name="phone" type="text" placeholder="Phone" class="form-control">
+                        <input id="phone" name="phone" type="text" placeholder="Τηλέφωνο" class="form-control">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-md-10 col-md-offset-1">
                                 <textarea class="form-control" id="message" name="message"
-                                          placeholder="Enter your massage for us here. We will get back to you within 2 business days."
+                                          placeholder="Γράψτε το μήνυμά σας εδώ και θα σας απαντήσουμε άμεσα"
                                           rows="e7"></textarea>
                     </div>
                 </div>
