--- a/app/contact.html
+++ b/app/contact.html
@@ -58,7 +58,7 @@
 
                 <div class="form-group">
                     <div class="col-md-12 text-center">
-                        <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                        <button type="submit" class="btn btn-primary btn-lg">Αποστολή</button>
                     </div>
                 </div>
             </fieldset>
