footer.html edited online with Bitbucket

--- a/app/footer.html
+++ b/app/footer.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="col-lg-3 col-lg-push-3 col-md-3 col-md-push-3  col-sm-3 col-sm-push-3 col-xs-3 col-xs-pull-2">
-           <a href ng-click="panelCtrl.selectTab(5)"> Επικοινωνία</a>
+            Επικοινωνία
         </div>
 
 
