--- a/app/footer.html
+++ b/app/footer.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="col-md-3 col-md-push-3 col-xs-6 col-xs-push-1">
-            Powered by NDM
+            <a href="mailto:ndmdevelop">Powered by NDM</a>
         </div>
 
     </div>
