footer.html edited online with Bitbucket

--- a/app/footer.html
+++ b/app/footer.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="col-md-3 col-md-push-3 col-xs-6 col-xs-push-1">
-            <a href="mailto:ndmdevelop">Powered by NDM</a>
+            Powered by<a href="mailto:ndmdevelop@gmail.com"> NDM</a>
         </div>
 
     </div>
