Material page: Add shadow background for thumbnails.

--- a/app/material.html
+++ b/app/material.html
@@ -2,7 +2,7 @@
 
         <div class="col-xs-6 col-md-3">
             <a href="app/img/material/stemfyla1-lg.jpg" class="thumbnail image-link" title="">
-                <img src="app/img/material/stemfyla1-sm.jpg" alt="...">
+                <img src="app/img/material/stemfyla1-sm.jpg" alt="..." class="img-responsive">
             </a>
         </div>
 
