Prepare diamondlipbook structure.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,16 @@
     <!-- Magnific Popup core CSS file -->
     <link rel="stylesheet" href="app/lib/magnific-popup/dist/magnific-popup.css">
 
+
+    <!-- add css and js for flipbook -->
+    <link type="text/css" href="app/css/catalog/style.css" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Play:400,700">
+
+
     <!-- Custom styles -->
     <link href="app/css/nav-bar.css" rel="stylesheet">
     <link href="app/css/footer.css" rel="stylesheet">
+    <link href="app/css/catalog.css" rel="stylesheet">
     <link href="app/css/main.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -31,6 +38,17 @@
     <script src="app/lib/html5shiv/dist/html5shiv.min.js"></script>
     <script src="app/lib/respond/dest/respond.min.js"></script>
     <![endif]-->
+
+
+
+    <!-- style css  -->
+    <!--<style>-->
+        <!--html, body {-->
+            <!--margin: 0;-->
+            <!--padding: 0;-->
+            <!--overflow: auto !important;-->
+        <!--}-->
+    <!--</style>-->
 </head>
 
 <body ng-controller="PanelController as panelCtrl">
