Load page-catalog's js at end of template.

--- a/public/full-width.html
+++ b/public/full-width.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="app/lib/magnific-popup/dist/magnific-popup.css">
 
     <!-- Custom styles -->
-    <link href="app/css/nav-bar.css" rel="stylesheet">
+    <link href="app/css/header.css" rel="stylesheet">
     <link href="app/css/footer.css" rel="stylesheet">
     <link href="app/css/main.css" rel="stylesheet">
 
