Improve user experience: Chagen mouse to zoom-in type on hover.

--- a/public/main.html
+++ b/public/main.html
@@ -21,9 +21,6 @@
 
 
     <!-- Custom styles -->
-    <link href="app/css/header.css" rel="stylesheet">
-    <link href="app/css/footer.css" rel="stylesheet">
-    <link href="app/css/catalog.css" rel="stylesheet">
     <link href="app/css/main.css" rel="stylesheet">
 
     <!-- TODO: verify minimum browres support is IE9 -- or at least show relevant message for flipbook
@@ -44,7 +41,7 @@
 
     <template-spinner></template-spinner>
 
-    <div ng-view showDuringResolve></div>
+    <div ng-view></div>
 
     <template-footer></template-footer>
 
