--- a/public/main.html
+++ b/public/main.html
@@ -15,9 +15,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" media="all"
           rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="app/lib/slick.js/slick/slick.min.js"/>
+
     <link rel="stylesheet" href="app/lib/magnific-popup/dist/magnific-popup.css">
+
     <link type="text/css" href="app/css/catalog/style.css" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Play:400,700">
 
 
     <!-- Custom styles -->
