--- a/public/main.html
+++ b/public/main.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" media="all"
           rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="app/lib/slick.js/slick/slick.min.js"/>
+    <link rel="stylesheet" type="text/css" href="app/lib/slick.js/slick/slick.css"/>
 
     <link rel="stylesheet" href="app/lib/magnific-popup/dist/magnific-popup.css">
 
