--- a/public/main.html
+++ b/public/main.html
@@ -31,7 +31,6 @@
     <!--<script src="app/lib/html5shiv/dist/html5shiv.min.js"></script>-->
     <!--<script src="app/lib/respond/dest/respond.min.js"></script>-->
     <!--<![endif]&ndash;&gt;-->
-    <script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 
 <body ng-controller="PageController as pageCtrl">
@@ -60,7 +59,10 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-animate.js"></script>
-
+<!-- Include the JS ReCaptcha API -->
+<script src="//www.google.com/recaptcha/api.js?render=explicit&onload=vcRecapthaApiLoaded" async defer></script>
+<!-- Include the ngReCaptcha directive -->
+<script src="/app/lib/angular-recaptcha/release/angular-recaptcha.min.js"></script>
 <script src="app/js/ie10-viewport-bug-workaround.js"></script>
 
 <!-- Custom scripts -->
