Change recaptcha language to greek.

--- a/public/main.html
+++ b/public/main.html
@@ -60,7 +60,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-animate.js"></script>
 <!-- Include the JS ReCaptcha API -->
-<script src="//www.google.com/recaptcha/api.js?render=explicit&onload=vcRecapthaApiLoaded" async defer></script>
+<script src="//www.google.com/recaptcha/api.js?render=explicit&onload=vcRecapthaApiLoaded&hl=el" async defer></script>
 <!-- Include the ngReCaptcha directive -->
 <script src="/app/lib/angular-recaptcha/release/angular-recaptcha.min.js"></script>
 <script src="app/js/ie10-viewport-bug-workaround.js"></script>
