--- a/public/main.html
+++ b/public/main.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href="app/lib/slick.js/slick/slick.css"/>
 
     <link rel="stylesheet" href="app/lib/magnific-popup/dist/magnific-popup.css">
-
+    <link rel="stylesheet" href="/app/lib/pnotify/pnotify.core.css">
     <link type="text/css" href="app/css/catalog/style.css" rel="stylesheet">
 
 
@@ -55,7 +55,7 @@
 <!-- Libraries -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<script src="app/lib/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
+<script src="/app/lib/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-animate.js"></script>
@@ -63,10 +63,11 @@
 <script src="//www.google.com/recaptcha/api.js?render=explicit&onload=vcRecapthaApiLoaded&hl=el" async defer></script>
 <!-- Include the ngReCaptcha directive -->
 <script src="/app/lib/angular-recaptcha/release/angular-recaptcha.min.js"></script>
-<script src="app/js/ie10-viewport-bug-workaround.js"></script>
+<script src="/app/js/ie10-viewport-bug-workaround.js"></script>
+<script src="/app/lib/pnotify/pnotify.core.js"></script>
 
 <!-- Custom scripts -->
-<script src="app/js/main.js"></script>
+<script src="/app/js/main.js"></script>
 
 </body>
 </html>
